After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780642 - webrtcechoprobe: SIGFPE in case the webdsp element is activated before webrtcechoprobe
webrtcechoprobe: SIGFPE in case the webdsp element is activated before webrtc...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-28 08:18 UTC by George Kiagiadakis
Modified: 2017-03-29 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
webrtcechoprobe: return from _read() early if the probe is not configured yet (951 bytes, patch)
2017-03-28 08:18 UTC, George Kiagiadakis
accepted-commit_now Details | Review

Description George Kiagiadakis 2017-03-28 08:18:33 UTC
Created attachment 348866 [details] [review]
webrtcechoprobe: return from _read() early if the probe is not configured yet

In case webdsp is activated before webrtcechoprobe, the webrtcechoprobe crashes in gst_webrtc_echo_probe_read() with SIGFPE because of self->info.bpf being 0 (i.e. the audio format has not been set yet).

The attached patch checks for a valid audio format and aborts early if this is not the case.
Comment 1 Nicolas Dufresne (ndufresne) 2017-03-28 13:58:16 UTC
Review of attachment 348866 [details] [review]:

That's seems correct, I forgot that case.
Comment 2 Nicolas Dufresne (ndufresne) 2017-03-28 13:58:31 UTC
Please add to 1.10 branch too.
Comment 3 George Kiagiadakis 2017-03-29 13:49:34 UTC
commit da44fea1d170160efacaf0b87042d4228ef90c03
Author: George Kiagiadakis <george.kiagiadakis@collabora.com>
Date:   Mon Mar 27 18:14:54 2017 +0300

    webrtcechoprobe: return from _read() early if the probe is not configured yet
    
    https://bugzilla.gnome.org/show_bug.cgi?id=780642


commit 9dc64fbbaf47004070222181930d27ae0ff2ea29
Author: George Kiagiadakis <george.kiagiadakis@collabora.com>
Date:   Mon Mar 27 18:14:54 2017 +0300

    webrtcechoprobe: return from _read() early if the probe is not configured yet
    
    https://bugzilla.gnome.org/show_bug.cgi?id=780642