webrtcechoprobe: return from _read() early if the probe is not configured yet

https://bugzilla.gnome.org/show_bug.cgi?id=780642